# RedBot

./: .gitignore  Cargo.toml  README.md  license.md  readme.md
src/: main.rs
src/commands/: avatar.rs  mod.rs  ping.rs
src/utils/: user.rs
